# adf435x

./: Cargo.toml  README.md
examples/: basic_usage.rs  full_featured.rs
manifests/: adf435x.yaml
src/: frequency.rs  lib.rs  main.rs
